--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Informacion dia mundial de la salud</title>
 
 <!--grupo CSS-->
-<link rel="stylesheet" href="../APP2-FRM/css/App2.min.css" />
+<link rel="stylesheet" href="css/App2.min.css" />
 <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
 
@@ -42,19 +42,22 @@ function MM_swapImage() { //v3.0
 <!-- End WOWSlider.com HEAD section -->
 </head>
 
-<body onLoad="MM_preloadImages('imagenes/images (2).jpg','imagenes/dentistas-en-las-rozas65515.jpg','imagenes/descarga (1).jpg','imagenes/Día-Mundial-de-la-Salud (1).jpg','imagenes/descarga (2).jpg','imagenes/dia-mundial-de-la-salud-razones.jpg')">
+<body onLoad="MM_preloadImages('imagenes/images (2).jpg','imagenes/descarga (1).jpg','imagenes/Día-Mundial-de-la-Salud (1).jpg','imagenes/descarga (2).jpg','imagenes/errt.jpg','imagenes/aaa.jpg','imagenes/yuhtyyyyyy.jpg','imagenes/yuhggfgfgf.jpg','imagenes/ggg.jpg')">
 <div data-role="page" id="Principal" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>Informacion dia mundial de la salud 7 de Abril </h1>
+<h1>Día Mundial de la Salud</h1>
 </div>
 <div data-role="main" class="ui-content">
 <div data-role="collapsible" data-content-theme="false">
 <h1>INFOGRAFIA</h1>
 <div>
 <p>Dia mundial de la salud</p>
-<br>
+<p>&nbsp;</p>
+<p><img src="imagenes/gggggggg.jpg" width="241" height="209" alt=""><br>
+</p>
 <div>
-<p>El Día Mundial de la Salud (DMS), que se celebra el 7  de abril, este año marca el final de las celebraciones del 70 aniversario de la  Organización Mundial de la Salud (OMS). En la Región de las Américas, estas  celebraciones se han enfocado en torno a la salud universal, bajo el lema  &ldquo;Salud universal: para todos y todas, en todas partes&rdquo;.<br>
+  <p>El Día Mundial de la Salud (DMS), que se celebra el 7  de abril, este año marca el final de las celebraciones del 70 aniversario de la  Organización Mundial de la Salud (OMS). En la Región de las Américas, estas  celebraciones se han enfocado en torno a la salud universal, bajo el lema  &ldquo;Salud universal: para todos y todas, en todas partes&rdquo;.</p>
+<p><img src="imagenes/grth.jpg" width="273" height="201" alt=""><br>
   El  DMS se celebra después de la &ldquo;<a href="https://www.paho.org/hq/index.php?option=com_content&view=article&id=14725:from-alma-ata-1978-to-astana-2018&Itemid=39594&lang=es">Conferencia Mundial de  Atención Primaria de Salud</a>&rdquo; del 2018 en  Astaná y antes de la &ldquo;Reunión de alto nivel de la Asamblea General de las  Naciones Unidas sobre la cobertura universal de salud¨ (UNGA) que se llevará a  cabo en Nueva York en septiembre de 2019. Ambos eventos, representan una gran  oportunidad para reiterar nuestro compromiso con la salud para todas las  personas, enfocándonos en el papel fundamental de la atención primaria de salud  en el camino hacia la salud universal.</p>
 <p><!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container1">
@@ -86,7 +89,7 @@ function MM_swapImage() { //v3.0
 </div>	<br>
   En la Región de las Américas, la campaña se centrará  en la equidad y la solidaridad, abordando las barreras de acceso a la salud y a  los servicios de salud, teniendo como meta, mejorar la comprensión de la salud  universal e impulsar acciones que contribuyan a que ésta sea una realidad para  todas las personas, en todas partes.
 </p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/dentistas-en-las-rozas65515.jpg',1)"><img src="imagenes/Cartel-Día-de-la-Salud-2018-1200x1697.jpg" width="224" height="199" id="Image32"></a></p> 
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image33','','imagenes/errt.jpg',1)"><img src="imagenes/9o8ikujyhtgr.png" width="194" height="173" id="Image5"></a></p> 
 </p>
 </div>
 
@@ -99,34 +102,34 @@ function MM_swapImage() { //v3.0
 <ul data-role="listview" data-theme="a" class="ui-listview ui-group-theme-a">
 <li class="ui-first-child ui-last-child">
 <a href="#Pagina1" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-<h2>1.¿Cuando se celebra y por que?</h2>
+<h2>¿Cuándo y porqué se celebra?</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
 <a href="#Pagina2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-<h2>2.¿Que se trata de conseguir con la campaña?</h2>
+<h2>¿Qué se trata de conseguir con la campaña?</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
 <a href="#Pagina3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-<h2>3.¿Que hace la OMS?</h2>
+<h2>¿Qué hace la OMS?</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
 <a href="#Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-<h2>4.Cobertura Sanitaria Universal</h2>
+<h2>Cobertura Sanitaria Universal</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
 <a href="#Pagina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-<h4>5.¿Que es lo que no incluye la cobertura sanitaria mundial?</h4>
+<h4>¿Que es lo que no incluye la cobertura sanitaria mundial?</h4>
 </a>
 </li>
 </ul>
 
-<p><a href="https://www.who.int/es" target="_self"> Ir a la página de la ORGANIZACIÓN MUNDIAL DE LA SALUD </a></p>
+<p><a href="https://www.who.int/es" target="_self"> Página de la OMS</a></p>
 <p>
-  <a href="https://osalde.org/dia-mundial-de-la-salud/" target="_self"> Página relacionada</a>  </p>
+  <a href="https://osalde.org/dia-mundial-de-la-salud/" target="_self"> Página relacionada</a></p>
 <p><a href="https://www.who.int/campaigns/world-health-day/2018/campaign-essentials/es/" target="_self"> Página relacionada 2</a>
   <script type="text/javascript" src="engine1/wowslider.js"></script>
   <script type="text/javascript" src="engine1/script.js"></script>
@@ -136,10 +139,9 @@ function MM_swapImage() { //v3.0
 </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="46" height="46" alt="pie">
+<img src="res/android/mdp13.png" width="46" height="46" alt="pie">
 </div>
 <div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 </div>
@@ -149,26 +151,27 @@ function MM_swapImage() { //v3.0
 
 <div data-role="page" id="Pagina1" data-add-back-btn="true" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-<h1>1.¿Cuando se celebra y por que?</h1>
+<h1>¿Cuándo y porqué se celebra?</h1>
+<h1><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image34','','imagenes/ggg.jpg',1)"><img src="imagenes/pliujyhtgrf.jpg" width="371" height="170" id="Image34"></a></h1>
 <h1>&nbsp;</h1>
-<h1><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image33','','imagenes/dia-mundial-de-la-salud-razones.jpg',1)"><img src="imagenes/descarga.jpg" width="265" height="190" id="Image4"></a></h1>
 <p>El Día Mundial de la Salud (DMS), que se celebra el 7 de abril, este año marca el final de las celebraciones del 70 aniversario de la Organización Mundial de la Salud (OMS). En la Región de las Américas, estas celebraciones se han enfocado en torno a la salud universal, bajo el lema “Salud universal: para todos y todas, en todas partes”.</p>
+<p><img src="imagenes/gggggggggggg.jpg" width="265" height="190" alt=""></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p> El Día Mundial de la Salud pondrá en el candelero la necesidad de la CSU y los beneficios que puede aportar. La OMS y sus asociados intercambiarán ejemplos de medidas que pueden adoptar para lograrla mediante una serie de actos y conversaciones que se celebrarán en distintos niveles.
 Como ha afirmado nuestro Director General, “Nadie debería tener que elegir entre la muerte y las dificultades económicas. Nadie debería tener que elegir entre comprar medicamentos y comprar alimentos”.</p>
+<p>&nbsp;</p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image33','','imagenes/yuhggfgfgf.jpg',1)"><img src="imagenes/iuytttt.png" width="303" height="158" id="Image33"></a></p>
 
 </div>
 <div data-role="content" align="center">
 
-<div><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image33','','imagenes/descarga (1).jpg',1)"><img src="imagenes/banner-DIA-MUNDIAL-DE-LA-SALUD.jpg" width="111" height="100" id="Image33"></a>
-</div>
+<div></div>
 </div>
 <div data-role="footer" align="center" data-theme="b" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="10%" height="10%" alt="pie">
+<img src="res/android/mdp13.png" width="10%" height="10%" alt="pie">
 </div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 </div>
@@ -177,10 +180,11 @@ Como ha afirmado nuestro Director General, “Nadie debería tener que elegir en
 
 <div data-role="page" id="Pagina2" data-add-back-btn="true" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>2.¿Qué se trata de conseguir con la campaña?</h1>
+<h1>¿Qué se trata de conseguir con la campaña?</h1>
+<p><img src="imagenes/images.jpg" width="239" height="194" alt=""></p>
 <p>El Día Mundial de la Salud, que se celebra el 7 de abril de cada año para conmemorar el aniversario de la fundación de la Organización Mundial de la Salud, nos ofrece una oportunidad única para movilizar la acción en torno a un tema de salud específico que preocupe a las personas de todo el mundo.
 El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depresión.</p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/Día-Mundial-de-la-Salud (1).jpg',1)"><img src="imagenes/web-dia_mundial_de_la_salud.jpg" width="479" height="200" id="Image"></a></p>
+<p><img src="imagenes/yuhtyyyyyy.jpg" width="262" height="209" alt=""></p>
 <p>&nbsp;</p>
 
 </div>
@@ -189,9 +193,8 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="10%" height="10%" alt="pie">
+<img src="res/android/mdp13.png" width="10%" height="10%" alt="pie">
 </div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 </div>
@@ -200,7 +203,7 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>3.¿Que hace la OMS?</h1>
+<h1>¿Qué hace la OMS?</h1>
 <p>La OMS cumple sus objetivos mediante las siguientes funciones básicas:</p>
 <ul>
 <li>ofrecer liderazgo en temas cruciales para la salud y participar en alianzas cuando se requieran actuaciones conjuntas;</li>
@@ -210,7 +213,7 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 <li>prestar apoyo técnico, catalizar el cambio y crear capacidad institucional duradera;</li>
 <li>seguir de cerca la situación en materia de salud y determinar las tendencias sanitarias.</li>
 </ul>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/descarga (2).jpg',1)"><img src="imagenes/dia-mundial-de-la-salud.jpg" width="387" height="212" id="Image2"></a></p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/descarga (2).jpg',1)"><img src="imagenes/erertret.jpg" width="167" height="149" alt=""></a><img src="imagenes/errt.jpg" width="168" height="190" alt=""></p>
 </div>
 <div data-role="content" align="center">
 
@@ -218,9 +221,8 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="10%" height="10%" alt="pie">
+<img src="res/android/mdp13.png" width="10%" height="10%" alt="pie">
 </div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 </div>
@@ -229,7 +231,7 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 
 <div data-role="page" id="Pagina4" data-add-back-btn="true" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>4.Cobertura Sanitaria Universal</h1>
+<h1>Cobertura Sanitaria Universal</h1>
 <p>El objetivo de la cobertura sanitaria universal es asegurar que todas las personas reciban los servicios sanitarios que necesitan, sin tener que pasar penurias financieras para pagarlos. Para que una comunidad o un país pueda alcanzar la cobertura sanitaria universal se han de cumplir varios requisitos, a saber:</p>
 <ul>
 <li>un sistema de salud sólido;</li>
@@ -237,8 +239,9 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 <li>acceso a medicamentos y tecnologías esenciales;</li>
 <li>personal sanitario bien capacitado</li>
 </ul>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/yuhtyyyyyy.jpg',1)"><img src="imagenes/dfefge.jpg" width="226" height="269" id="Image3"></a></p>
 <p>&nbsp;</p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/dentistas-en-las-rozas65515.jpg',1)"><img src="imagenes/dia-mundial-de-la-salud.png" width="292" height="118" id="Image3"></a></p>
+<p>&nbsp;</p>
 </div>
 <div data-role="content" align="center">
 
@@ -246,9 +249,8 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="10%" height="10%" alt="pie">
+<img src="res/android/mdp13.png" width="10%" height="10%" alt="pie">
 </div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 </div>
@@ -257,20 +259,20 @@ El tema de nuestra campaña para el Día Mundial de la Salud de 2017 es la depre
 
 <div data-role="page" id="Pagina5" data-add-back-btn="true" data-theme="a">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>5.¿Que es lo que no incluye la cobertura sanitaria mundial?</h1>
-<p>En el marco de un nuevo Día Mundial de la Salud, que se conmemora cada 7 de abril, el organismo internacional se propuso una nueva meta bajo el lema "La salud para todos". La deuda pendiente de la OMS para garantizar el acceso a la atención médica en un mundo desigual</p>
+<h1>¿Que es lo que no incluye la cobertura sanitaria mundial?</h1>
+<p>En el marco de un nuevo Día Mundial de la Salud, que se conmemora cada 7 de abril, el organismo internacional se propuso una nueva meta bajo el lema "La salud para todos". La deuda pendiente de la OMS para garantizar el acceso a la atención médica en un mundo desigual.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image32','','imagenes/aaa.jpg',1)"><img src="imagenes/ehtgh.jpg" width="375" height="222" id="Image32"></a></p>
 </div>
 <div data-role="content" align="center">
 
-<div>
-<img src="imagenes/dia_salud.jpg" width="72%" height="53%" alt="mod1">
-</div>
+<div></div>
 </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
-<img src="imagenes/persona_azul.png" width="10%" height="10%" alt="pie">
+<img src="res/android/mdp13.png"width="10%" height="10%" alt="pie">
 </div>
-<h4>Aplicación 3 </h4>
 <h4>Dia mundial de la salud</h4>
 <h4>Flores Rivera Montserrat</h4>
 
