--- a/wowslider-howto.html
+++ b/wowslider-howto.html
@@ -106,29 +106,43 @@
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/descarga_1.jpg" alt="descarga (1)" title="descarga (1)" id="wows1_0"/></li>
-		<li><img src="data1/images/descarga_2.jpg" alt="descarga (2)" title="descarga (2)" id="wows1_1"/></li>
-		<li><img src="data1/images/descarga_3.jpg" alt="descarga (3)" title="descarga (3)" id="wows1_2"/></li>
-		<li><img src="data1/images/descarga_4.jpg" alt="descarga (4)" title="descarga (4)" id="wows1_3"/></li>
-		<li><img src="data1/images/descarga.jpg" alt="descarga" title="descarga" id="wows1_4"/></li>
-		<li><img src="data1/images/images_1.jpg" alt="images (1)" title="images (1)" id="wows1_5"/></li>
-		<li><img src="data1/images/images_2.jpg" alt="images (2)" title="images (2)" id="wows1_6"/></li>
-		<li><img src="data1/images/images_3.jpg" alt="images (3)" title="images (3)" id="wows1_7"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/images_4.jpg" alt="slideshow javascript" title="images (4)" id="wows1_8"/></a></li>
-		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_9"/></li>
+		<li><img src="data1/images/9o8ikujyhtgr.png" alt="9o8ikujyhtgr" title="9o8ikujyhtgr" id="wows1_0"/></li>
+		<li><img src="data1/images/aaa.jpg" alt="aaa" title="aaa" id="wows1_1"/></li>
+		<li><img src="data1/images/dfefge.jpg" alt="dfefge" title="dfefge" id="wows1_2"/></li>
+		<li><img src="data1/images/ehtgh.jpg" alt="ehtgh" title="ehtgh" id="wows1_3"/></li>
+		<li><img src="data1/images/erertret.jpg" alt="erertret" title="erertret" id="wows1_4"/></li>
+		<li><img src="data1/images/errt.jpg" alt="errt" title="errt" id="wows1_5"/></li>
+		<li><img src="data1/images/ert.jpg" alt="ert" title="ert" id="wows1_6"/></li>
+		<li><img src="data1/images/ggg.jpg" alt="ggg" title="ggg" id="wows1_7"/></li>
+		<li><img src="data1/images/gggggggg.jpg" alt="gggggggg" title="gggggggg" id="wows1_8"/></li>
+		<li><img src="data1/images/gggggggggggg.jpg" alt="gggggggggggg" title="gggggggggggg" id="wows1_9"/></li>
+		<li><img src="data1/images/grth.jpg" alt="grth" title="grth" id="wows1_10"/></li>
+		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_11"/></li>
+		<li><img src="data1/images/iuytttt.png" alt="iuytttt" title="iuytttt" id="wows1_12"/></li>
+		<li><img src="data1/images/persona_azul.png" alt="persona_azul" title="persona_azul" id="wows1_13"/></li>
+		<li><img src="data1/images/pliujyhtgrf.jpg" alt="pliujyhtgrf" title="pliujyhtgrf" id="wows1_14"/></li>
+		<li><a href="http://wowslider.com"><img src="data1/images/yuhggfgfgf.jpg" alt="http://wowslider.com/" title="yuhggfgfgf" id="wows1_15"/></a></li>
+		<li><img src="data1/images/yuhtyyyyyy.jpg" alt="yuhtyyyyyy" title="yuhtyyyyyy" id="wows1_16"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="descarga (1)"><span><img src="data1/tooltips/descarga_1.jpg" alt="descarga (1)"/>1</span></a>
-		<a href="#" title="descarga (2)"><span><img src="data1/tooltips/descarga_2.jpg" alt="descarga (2)"/>2</span></a>
-		<a href="#" title="descarga (3)"><span><img src="data1/tooltips/descarga_3.jpg" alt="descarga (3)"/>3</span></a>
-		<a href="#" title="descarga (4)"><span><img src="data1/tooltips/descarga_4.jpg" alt="descarga (4)"/>4</span></a>
-		<a href="#" title="descarga"><span><img src="data1/tooltips/descarga.jpg" alt="descarga"/>5</span></a>
-		<a href="#" title="images (1)"><span><img src="data1/tooltips/images_1.jpg" alt="images (1)"/>6</span></a>
-		<a href="#" title="images (2)"><span><img src="data1/tooltips/images_2.jpg" alt="images (2)"/>7</span></a>
-		<a href="#" title="images (3)"><span><img src="data1/tooltips/images_3.jpg" alt="images (3)"/>8</span></a>
-		<a href="#" title="images (4)"><span><img src="data1/tooltips/images_4.jpg" alt="images (4)"/>9</span></a>
-		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>10</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery slideshow</a> by WOWSlider.com v8.8</div>
+		<a href="#" title="9o8ikujyhtgr"><span><img src="data1/tooltips/9o8ikujyhtgr.png" alt="9o8ikujyhtgr"/>1</span></a>
+		<a href="#" title="aaa"><span><img src="data1/tooltips/aaa.jpg" alt="aaa"/>2</span></a>
+		<a href="#" title="dfefge"><span><img src="data1/tooltips/dfefge.jpg" alt="dfefge"/>3</span></a>
+		<a href="#" title="ehtgh"><span><img src="data1/tooltips/ehtgh.jpg" alt="ehtgh"/>4</span></a>
+		<a href="#" title="erertret"><span><img src="data1/tooltips/erertret.jpg" alt="erertret"/>5</span></a>
+		<a href="#" title="errt"><span><img src="data1/tooltips/errt.jpg" alt="errt"/>6</span></a>
+		<a href="#" title="ert"><span><img src="data1/tooltips/ert.jpg" alt="ert"/>7</span></a>
+		<a href="#" title="ggg"><span><img src="data1/tooltips/ggg.jpg" alt="ggg"/>8</span></a>
+		<a href="#" title="gggggggg"><span><img src="data1/tooltips/gggggggg.jpg" alt="gggggggg"/>9</span></a>
+		<a href="#" title="gggggggggggg"><span><img src="data1/tooltips/gggggggggggg.jpg" alt="gggggggggggg"/>10</span></a>
+		<a href="#" title="grth"><span><img src="data1/tooltips/grth.jpg" alt="grth"/>11</span></a>
+		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>12</span></a>
+		<a href="#" title="iuytttt"><span><img src="data1/tooltips/iuytttt.png" alt="iuytttt"/>13</span></a>
+		<a href="#" title="persona_azul"><span><img src="data1/tooltips/persona_azul.png" alt="persona_azul"/>14</span></a>
+		<a href="#" title="pliujyhtgrf"><span><img src="data1/tooltips/pliujyhtgrf.jpg" alt="pliujyhtgrf"/>15</span></a>
+		<a href="#" title="yuhggfgfgf"><span><img src="data1/tooltips/yuhggfgfgf.jpg" alt="yuhggfgfgf"/>16</span></a>
+		<a href="#" title="yuhtyyyyyy"><span><img src="data1/tooltips/yuhtyyyyyy.jpg" alt="yuhtyyyyyy"/>17</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com/vi">css slider</a> by WOWSlider.com v8.7</div>
 <div class="ws_shadow"></div>
 </div>	
 <script type="text/javascript" src="engine1/wowslider.js"></script>
@@ -137,7 +151,7 @@
 
 
 <div class="instuction">
-	<p class="note">HTML code for the slider <a href="file:///I:/DAM/2DO PARCIAL/aplicaciones/app3/wowslider.html">I:/DAM/2DO PARCIAL/aplicaciones/app3/wowslider.html</a></p>
+	<p class="note">HTML code for the slider <a href="file:///J:/DAM/2do Parcial/aplicaciones/APP3-FRM/app3/wowslider.html">J:/DAM/2do Parcial/aplicaciones/APP3-FRM/app3/wowslider.html</a></p>
 
 	<h1>
 		How to add this slider to HTML page
@@ -147,7 +161,7 @@
 	<ul>
 		<li class="mono">data1/</li>
 		<li class="mono">engine1/</li>
-		<li class="note">Current location: <a href="file:///I:/DAM/2DO PARCIAL/aplicaciones/app3">I:/DAM/2DO PARCIAL/aplicaciones/app3</a>. <br>These folders should be located in the same folder as your html page</li>
+		<li class="note">Current location: <a href="file:///J:/DAM/2do Parcial/aplicaciones/APP3-FRM/app3">J:/DAM/2do Parcial/aplicaciones/APP3-FRM/app3</a>. <br>These folders should be located in the same folder as your html page</li>
 	</ul>
 
 	<h2><span class="num">2</span> Paste this code to your page between the tags <span class="mono">&lt;head&gt;&lt;/head&gt;</span></h2>
@@ -161,29 +175,43 @@
 	<textarea onclick="this.select()" rows="15">&lt;!-- Start WOWSlider.com BODY section --&gt;
 &lt;div id=&quot;wowslider-container1&quot;&gt;
 &lt;div class=&quot;ws_images&quot;&gt;&lt;ul&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/descarga_1.jpg&quot; alt=&quot;descarga (1)&quot; title=&quot;descarga (1)&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/descarga_2.jpg&quot; alt=&quot;descarga (2)&quot; title=&quot;descarga (2)&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/descarga_3.jpg&quot; alt=&quot;descarga (3)&quot; title=&quot;descarga (3)&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/descarga_4.jpg&quot; alt=&quot;descarga (4)&quot; title=&quot;descarga (4)&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/descarga.jpg&quot; alt=&quot;descarga&quot; title=&quot;descarga&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/images_1.jpg&quot; alt=&quot;images (1)&quot; title=&quot;images (1)&quot; id=&quot;wows1_5&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/images_2.jpg&quot; alt=&quot;images (2)&quot; title=&quot;images (2)&quot; id=&quot;wows1_6&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/images_3.jpg&quot; alt=&quot;images (3)&quot; title=&quot;images (3)&quot; id=&quot;wows1_7&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;&lt;img src=&quot;data1/images/images_4.jpg&quot; alt=&quot;slideshow javascript&quot; title=&quot;images (4)&quot; id=&quot;wows1_8&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/images.jpg&quot; alt=&quot;images&quot; title=&quot;images&quot; id=&quot;wows1_9&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/9o8ikujyhtgr.png&quot; alt=&quot;9o8ikujyhtgr&quot; title=&quot;9o8ikujyhtgr&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/aaa.jpg&quot; alt=&quot;aaa&quot; title=&quot;aaa&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/dfefge.jpg&quot; alt=&quot;dfefge&quot; title=&quot;dfefge&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/ehtgh.jpg&quot; alt=&quot;ehtgh&quot; title=&quot;ehtgh&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/erertret.jpg&quot; alt=&quot;erertret&quot; title=&quot;erertret&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/errt.jpg&quot; alt=&quot;errt&quot; title=&quot;errt&quot; id=&quot;wows1_5&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/ert.jpg&quot; alt=&quot;ert&quot; title=&quot;ert&quot; id=&quot;wows1_6&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/ggg.jpg&quot; alt=&quot;ggg&quot; title=&quot;ggg&quot; id=&quot;wows1_7&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/gggggggg.jpg&quot; alt=&quot;gggggggg&quot; title=&quot;gggggggg&quot; id=&quot;wows1_8&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/gggggggggggg.jpg&quot; alt=&quot;gggggggggggg&quot; title=&quot;gggggggggggg&quot; id=&quot;wows1_9&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/grth.jpg&quot; alt=&quot;grth&quot; title=&quot;grth&quot; id=&quot;wows1_10&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images.jpg&quot; alt=&quot;images&quot; title=&quot;images&quot; id=&quot;wows1_11&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/iuytttt.png&quot; alt=&quot;iuytttt&quot; title=&quot;iuytttt&quot; id=&quot;wows1_12&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/persona_azul.png&quot; alt=&quot;persona_azul&quot; title=&quot;persona_azul&quot; id=&quot;wows1_13&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/pliujyhtgrf.jpg&quot; alt=&quot;pliujyhtgrf&quot; title=&quot;pliujyhtgrf&quot; id=&quot;wows1_14&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;&lt;img src=&quot;data1/images/yuhggfgfgf.jpg&quot; alt=&quot;http://wowslider.com/&quot; title=&quot;yuhggfgfgf&quot; id=&quot;wows1_15&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/yuhtyyyyyy.jpg&quot; alt=&quot;yuhtyyyyyy&quot; title=&quot;yuhtyyyyyy&quot; id=&quot;wows1_16&quot;/&gt;&lt;/li&gt;
 	&lt;/ul&gt;&lt;/div&gt;
 	&lt;div class=&quot;ws_bullets&quot;&gt;&lt;div&gt;
-		&lt;a href=&quot;#&quot; title=&quot;descarga (1)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga_1.jpg&quot; alt=&quot;descarga (1)&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;descarga (2)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga_2.jpg&quot; alt=&quot;descarga (2)&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;descarga (3)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga_3.jpg&quot; alt=&quot;descarga (3)&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;descarga (4)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga_4.jpg&quot; alt=&quot;descarga (4)&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;descarga&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga.jpg&quot; alt=&quot;descarga&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;images (1)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_1.jpg&quot; alt=&quot;images (1)&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;images (2)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_2.jpg&quot; alt=&quot;images (2)&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;images (3)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_3.jpg&quot; alt=&quot;images (3)&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;images (4)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_4.jpg&quot; alt=&quot;images (4)&quot;/&gt;9&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;images&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images.jpg&quot; alt=&quot;images&quot;/&gt;10&lt;/span&gt;&lt;/a&gt;
-	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;jquery slideshow&lt;/a&gt; by WOWSlider.com v8.8&lt;/div&gt;
+		&lt;a href=&quot;#&quot; title=&quot;9o8ikujyhtgr&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/9o8ikujyhtgr.png&quot; alt=&quot;9o8ikujyhtgr&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;aaa&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/aaa.jpg&quot; alt=&quot;aaa&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;dfefge&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/dfefge.jpg&quot; alt=&quot;dfefge&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;ehtgh&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/ehtgh.jpg&quot; alt=&quot;ehtgh&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;erertret&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/erertret.jpg&quot; alt=&quot;erertret&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;errt&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/errt.jpg&quot; alt=&quot;errt&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;ert&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/ert.jpg&quot; alt=&quot;ert&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;ggg&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/ggg.jpg&quot; alt=&quot;ggg&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;gggggggg&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/gggggggg.jpg&quot; alt=&quot;gggggggg&quot;/&gt;9&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;gggggggggggg&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/gggggggggggg.jpg&quot; alt=&quot;gggggggggggg&quot;/&gt;10&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;grth&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/grth.jpg&quot; alt=&quot;grth&quot;/&gt;11&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images.jpg&quot; alt=&quot;images&quot;/&gt;12&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;iuytttt&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/iuytttt.png&quot; alt=&quot;iuytttt&quot;/&gt;13&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;persona_azul&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/persona_azul.png&quot; alt=&quot;persona_azul&quot;/&gt;14&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;pliujyhtgrf&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/pliujyhtgrf.jpg&quot; alt=&quot;pliujyhtgrf&quot;/&gt;15&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;yuhggfgfgf&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/yuhggfgfgf.jpg&quot; alt=&quot;yuhggfgfgf&quot;/&gt;16&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;yuhtyyyyyy&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/yuhtyyyyyy.jpg&quot; alt=&quot;yuhtyyyyyy&quot;/&gt;17&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com/vi&quot;&gt;css slider&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
 &lt;div class=&quot;ws_shadow&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;	
 &lt;script type=&quot;text/javascript&quot; src=&quot;engine1/wowslider.js&quot;&gt;&lt;/script&gt;
