--- a/wowslider.html
+++ b/wowslider.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jquery slideshow</title>
+	<title>Css slider</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Jquery slideshow" />
+	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Css slider" />
 	
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
@@ -16,29 +16,43 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/descarga_1.jpg" alt="descarga (1)" title="descarga (1)" id="wows1_0"/></li>
-		<li><img src="data1/images/descarga_2.jpg" alt="descarga (2)" title="descarga (2)" id="wows1_1"/></li>
-		<li><img src="data1/images/descarga_3.jpg" alt="descarga (3)" title="descarga (3)" id="wows1_2"/></li>
-		<li><img src="data1/images/descarga_4.jpg" alt="descarga (4)" title="descarga (4)" id="wows1_3"/></li>
-		<li><img src="data1/images/descarga.jpg" alt="descarga" title="descarga" id="wows1_4"/></li>
-		<li><img src="data1/images/images_1.jpg" alt="images (1)" title="images (1)" id="wows1_5"/></li>
-		<li><img src="data1/images/images_2.jpg" alt="images (2)" title="images (2)" id="wows1_6"/></li>
-		<li><img src="data1/images/images_3.jpg" alt="images (3)" title="images (3)" id="wows1_7"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/images_4.jpg" alt="slideshow javascript" title="images (4)" id="wows1_8"/></a></li>
-		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_9"/></li>
+		<li><img src="data1/images/9o8ikujyhtgr.png" alt="9o8ikujyhtgr" title="9o8ikujyhtgr" id="wows1_0"/></li>
+		<li><img src="data1/images/aaa.jpg" alt="aaa" title="aaa" id="wows1_1"/></li>
+		<li><img src="data1/images/dfefge.jpg" alt="dfefge" title="dfefge" id="wows1_2"/></li>
+		<li><img src="data1/images/ehtgh.jpg" alt="ehtgh" title="ehtgh" id="wows1_3"/></li>
+		<li><img src="data1/images/erertret.jpg" alt="erertret" title="erertret" id="wows1_4"/></li>
+		<li><img src="data1/images/errt.jpg" alt="errt" title="errt" id="wows1_5"/></li>
+		<li><img src="data1/images/ert.jpg" alt="ert" title="ert" id="wows1_6"/></li>
+		<li><img src="data1/images/ggg.jpg" alt="ggg" title="ggg" id="wows1_7"/></li>
+		<li><img src="data1/images/gggggggg.jpg" alt="gggggggg" title="gggggggg" id="wows1_8"/></li>
+		<li><img src="data1/images/gggggggggggg.jpg" alt="gggggggggggg" title="gggggggggggg" id="wows1_9"/></li>
+		<li><img src="data1/images/grth.jpg" alt="grth" title="grth" id="wows1_10"/></li>
+		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_11"/></li>
+		<li><img src="data1/images/iuytttt.png" alt="iuytttt" title="iuytttt" id="wows1_12"/></li>
+		<li><img src="data1/images/persona_azul.png" alt="persona_azul" title="persona_azul" id="wows1_13"/></li>
+		<li><img src="data1/images/pliujyhtgrf.jpg" alt="pliujyhtgrf" title="pliujyhtgrf" id="wows1_14"/></li>
+		<li><a href="http://wowslider.com"><img src="data1/images/yuhggfgfgf.jpg" alt="http://wowslider.com/" title="yuhggfgfgf" id="wows1_15"/></a></li>
+		<li><img src="data1/images/yuhtyyyyyy.jpg" alt="yuhtyyyyyy" title="yuhtyyyyyy" id="wows1_16"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="descarga (1)"><span><img src="data1/tooltips/descarga_1.jpg" alt="descarga (1)"/>1</span></a>
-		<a href="#" title="descarga (2)"><span><img src="data1/tooltips/descarga_2.jpg" alt="descarga (2)"/>2</span></a>
-		<a href="#" title="descarga (3)"><span><img src="data1/tooltips/descarga_3.jpg" alt="descarga (3)"/>3</span></a>
-		<a href="#" title="descarga (4)"><span><img src="data1/tooltips/descarga_4.jpg" alt="descarga (4)"/>4</span></a>
-		<a href="#" title="descarga"><span><img src="data1/tooltips/descarga.jpg" alt="descarga"/>5</span></a>
-		<a href="#" title="images (1)"><span><img src="data1/tooltips/images_1.jpg" alt="images (1)"/>6</span></a>
-		<a href="#" title="images (2)"><span><img src="data1/tooltips/images_2.jpg" alt="images (2)"/>7</span></a>
-		<a href="#" title="images (3)"><span><img src="data1/tooltips/images_3.jpg" alt="images (3)"/>8</span></a>
-		<a href="#" title="images (4)"><span><img src="data1/tooltips/images_4.jpg" alt="images (4)"/>9</span></a>
-		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>10</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery slideshow</a> by WOWSlider.com v8.8</div>
+		<a href="#" title="9o8ikujyhtgr"><span><img src="data1/tooltips/9o8ikujyhtgr.png" alt="9o8ikujyhtgr"/>1</span></a>
+		<a href="#" title="aaa"><span><img src="data1/tooltips/aaa.jpg" alt="aaa"/>2</span></a>
+		<a href="#" title="dfefge"><span><img src="data1/tooltips/dfefge.jpg" alt="dfefge"/>3</span></a>
+		<a href="#" title="ehtgh"><span><img src="data1/tooltips/ehtgh.jpg" alt="ehtgh"/>4</span></a>
+		<a href="#" title="erertret"><span><img src="data1/tooltips/erertret.jpg" alt="erertret"/>5</span></a>
+		<a href="#" title="errt"><span><img src="data1/tooltips/errt.jpg" alt="errt"/>6</span></a>
+		<a href="#" title="ert"><span><img src="data1/tooltips/ert.jpg" alt="ert"/>7</span></a>
+		<a href="#" title="ggg"><span><img src="data1/tooltips/ggg.jpg" alt="ggg"/>8</span></a>
+		<a href="#" title="gggggggg"><span><img src="data1/tooltips/gggggggg.jpg" alt="gggggggg"/>9</span></a>
+		<a href="#" title="gggggggggggg"><span><img src="data1/tooltips/gggggggggggg.jpg" alt="gggggggggggg"/>10</span></a>
+		<a href="#" title="grth"><span><img src="data1/tooltips/grth.jpg" alt="grth"/>11</span></a>
+		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>12</span></a>
+		<a href="#" title="iuytttt"><span><img src="data1/tooltips/iuytttt.png" alt="iuytttt"/>13</span></a>
+		<a href="#" title="persona_azul"><span><img src="data1/tooltips/persona_azul.png" alt="persona_azul"/>14</span></a>
+		<a href="#" title="pliujyhtgrf"><span><img src="data1/tooltips/pliujyhtgrf.jpg" alt="pliujyhtgrf"/>15</span></a>
+		<a href="#" title="yuhggfgfgf"><span><img src="data1/tooltips/yuhggfgfgf.jpg" alt="yuhggfgfgf"/>16</span></a>
+		<a href="#" title="yuhtyyyyyy"><span><img src="data1/tooltips/yuhtyyyyyy.jpg" alt="yuhtyyyyyy"/>17</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com/vi">css slider</a> by WOWSlider.com v8.7</div>
 	<div class="ws_shadow"></div>
 	</div>	
 	<script type="text/javascript" src="engine1/wowslider.js"></script>
